--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^2.7.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mysql2": "^1.7.0",
+    "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^5.21.11"
+    "sequelize": "^5.0.0-beta.11"
   }
 }
