--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "csurf": "^1.9.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^6.5.0",
+    "lodash.update": "^4.10.2",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
+    "mongoose": "^5.9.18",
     "nodemailer": "^6.4.8",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
